--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "embla-carousel-react": "^8.6.0",
     "lucide-react": "^0.513.0",
     "next": "15.3.2",
+    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-hook-form": "^7.57.0",
     "react-icons": "^5.5.0",
     "react-spinners": "^0.17.0",
+    "sonner": "^2.0.5",
     "tailwind-merge": "^3.3.0",
     "vaul": "^1.1.2",
     "zod": "^3.25.56"
