--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "easemymeet",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev --turbopack",
     "build": "next build",
@@ -25,6 +26,7 @@
     "date-fns": "^4.1.0",
     "embla-carousel-autoplay": "^8.6.0",
     "embla-carousel-react": "^8.6.0",
+    "googleapis": "^150.0.1",
     "lucide-react": "^0.513.0",
     "next": "15.3.2",
     "next-themes": "^0.4.6",
